Fix broken layout if user added emoji

--- a/themes/theme-boilerplate/src/scss/components/_userContent.scss
+++ b/themes/theme-boilerplate/src/scss/components/_userContent.scss
@@ -45,6 +45,9 @@ $code-block_padding:                    $userContent_fontSize !default;
         position: relative;
         margin: 0 auto;
         display: block;
+        &.emoji {
+            display: inline-block;
+        }
     }
 
     p,
